--- a/MyPassionProject.html
+++ b/MyPassionProject.html
@@ -2,13 +2,31 @@
 
 <html>
 	<head>
+		<title>~My Passions~</title>
 	</head>
+
 	<body>
 
-		<h1>Hello World!</h1>
-		
+		<h2>Things I do on the daily</h2>
+		<p>Some of the following things I do on the daily when I'm not studying, doing homework, eating or shopping woohoo, some of them are:
+		</p>
 
-		<p>My name is Jesse</p>
+		<p>
+			<ul>
+			<li>Vampire Diaries</li>
+			<li>Frands and Family</li>
+			<li><a href="http://imaginationshot.tumblr.com">My tumblr wohooo</a></li></p>
+			</ul>
+		<p>
+
+		<p>
+			<img src="gian.jpg">
+			<br>This is me and my bro at cancun yeee
+		</p>
+
+		
+		<img src="alex.jpg">
+		<br><img src="thatmoment.gif">
 
 
 	</body>
