--- a/MyPassionProject.html
+++ b/MyPassionProject.html
@@ -2,6 +2,7 @@
 
 <html>
 	<head>
+		<link rel="stylesheet" type="text/css" href="MyPassionProject.css">
 		<title>~My Passions~</title>
 	</head>
 
