--- a/MyPassionProject.html
+++ b/MyPassionProject.html
@@ -9,7 +9,7 @@
 	<body>
 
 		<h2>Things I do on the daily</h2>
-		<p>Some of the following things I do on the daily when I'm not studying, doing homework, eating or shopping woohoo, some of them are:
+		<p id="paragraph1">Some of the following things I do on the daily when I'm not studying, doing homework, eating or shopping woohoo, some of them are:
 		</p>
 
 		<p>
@@ -18,16 +18,17 @@
 			<li>Frands and Family</li>
 			<li><a href="http://imaginationshot.tumblr.com">My tumblr wohooo</a></li></p>
 			</ul>
-		<p>
+		</p>
 
 		<p>
-			<img src="gian.jpg">
+			<div class="fifty"><img src="gian.jpg"></div>
 			<br>This is me and my bro at cancun yeee
 		</p>
 
-		
-		<img src="alex.jpg">
-		<br><img src="thatmoment.gif">
+		<div class="pictures">
+		<div class="fifty"><img src="alex.jpg"></div>
+		<div class="fifty"><br><img src="thatmoment.gif"></div>
+		</div>
 
 
 	</body>
