--- a/MyPassionProject.html
+++ b/MyPassionProject.html
@@ -21,11 +21,10 @@
 			</p>
 
 			<p>
-				<div class="fifty"><img src="gian.jpg"></div>
-				<br>This is me and my bro at cancun yeee
+				<div class="picture"><img src="gian.jpg"></div>
+				<div id="meandbro">This is me and my bro at cancun yeee</div>
 			</p>
 
-				<div class="pictures">
 				<div class="fifty"><img src="alex.jpg"></div>
 				<div class="fifty"><br><img src="thatmoment.gif"></div>
 				</div>
