made a paragraph justified

--- a/MyPassionProject.html
+++ b/MyPassionProject.html
@@ -20,6 +20,8 @@
 				</ul>
 			</p>
 
+			<p><div class="justify">hello hello hello hello hello hello hello hello hello hello hello hello hello hello hello hello hello hello hello hello hello hello hello hello hello hello hello hello hello hello hello hello hello hello hello hello hello hello hello hello hello hello hello hello hello hello hello hello hello hello hello hello hello hello hello hello hello hello hello hello hello hello hello hello hello hello hello hello hello hello hello this is meant to be a justified paragraph lalalal</div></p>
+
 			<p>
 				<div class="picture"><img src="gian.jpg"></div>
 				<div id="meandbro">This is me and my bro at cancun yeee</div>
