--- a/MyPassionProject.html
+++ b/MyPassionProject.html
@@ -20,7 +20,7 @@
 				</ul>
 			</p>
 
-			<p><div class="justify">hello hello hello hello hello hello hello hello hello hello hello hello hello hello hello hello hello hello hello hello hello hello hello hello hello hello hello hello hello hello hello hello hello hello hello hello hello hello hello hello hello hello hello hello hello hello hello hello hello hello hello hello hello hello hello hello hello hello hello hello hello hello hello hello hello hello hello hello hello hello hello this is meant to be a justified paragraph lalalal</div></p>
+			<p><div class="justify">hello hello hello hello hello hello hello hello hello hello hello. <span class="bluetext">This is the line with the span.</span> Hello hello hello hello hello hello hello hello hello. Hello hello hello hello hello hello hello hello hello hello hello hello hello hello hello hello hello hello hello hello hello hello hello hello hello hello hello hello hello hello hello hello hello hello hello hello hello hello hello hello hello hello hello hello hello hello hello hello hello hello hello this is meant to be a justified paragraph lalalal</div></p>
 
 			<p>
 				<div class="picture"><img src="gian.jpg"></div>
